--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,10 +18,13 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>100</y>
+      <y>60</y>
       <width>181</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>회원 조회</string>
@@ -31,7 +34,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>260</y>
+      <y>300</y>
       <width>181</width>
       <height>51</height>
      </rect>
@@ -44,7 +47,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>340</y>
+      <y>380</y>
       <width>181</width>
       <height>51</height>
      </rect>
@@ -57,13 +60,26 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>180</y>
+      <y>140</y>
       <width>181</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>정기 주차 조회</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="current_check">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>220</y>
+      <width>181</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>현재 입차차량 조회</string>
     </property>
    </widget>
   </widget>
