--- a/regular_add.ui
+++ b/regular_add.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>665</width>
-    <height>642</height>
+    <height>727</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>320</y>
+     <y>390</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -66,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>600</y>
+     <y>670</y>
      <width>121</width>
      <height>21</height>
     </rect>
@@ -79,17 +79,20 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>110</y>
+     <y>180</y>
      <width>461</width>
      <height>201</height>
     </rect>
+   </property>
+   <property name="verticalHeaderFormat">
+    <enum>QCalendarWidget::NoVerticalHeader</enum>
    </property>
   </widget>
   <widget class="QLineEdit" name="start_txt">
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>320</y>
+     <y>390</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -99,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>600</y>
+     <y>670</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -109,7 +112,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>600</y>
+     <y>670</y>
      <width>89</width>
      <height>25</height>
     </rect>
@@ -122,10 +125,13 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>380</y>
+     <y>450</y>
      <width>461</width>
      <height>201</height>
     </rect>
+   </property>
+   <property name="verticalHeaderFormat">
+    <enum>QCalendarWidget::NoVerticalHeader</enum>
    </property>
   </widget>
   <widget class="QPushButton" name="exit_btn">
@@ -145,13 +151,36 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>600</y>
+     <y>670</y>
      <width>89</width>
      <height>25</height>
     </rect>
    </property>
    <property name="text">
     <string>수정</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="phone_label">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>120</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>전화번호</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="phone_txt">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>120</y>
+     <width>171</width>
+     <height>21</height>
+    </rect>
    </property>
   </widget>
  </widget>
