--- a/cal.ui
+++ b/cal.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>588</width>
-    <height>507</height>
+    <height>551</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -168,7 +168,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>460</y>
+     <y>520</y>
      <width>89</width>
      <height>25</height>
     </rect>
@@ -181,26 +181,13 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>460</y>
+     <y>520</y>
      <width>89</width>
      <height>25</height>
     </rect>
    </property>
    <property name="text">
     <string>계 산</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>420</y>
-     <width>112</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>포인트 사용</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_7">
@@ -214,6 +201,65 @@
    </property>
    <property name="text">
     <string>보유 포인트</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="point_btn">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>440</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>포인트 사용</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="point_input">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>440</y>
+     <width>113</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="phone_input">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>480</y>
+     <width>113</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="take_btn">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>480</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>포인트 적립</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>480</y>
+     <width>81</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>핸드폰 번호</string>
    </property>
   </widget>
  </widget>
