--- a/blacklist.ui
+++ b/blacklist.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>user</class>
- <widget class="QDialog" name="user">
+ <class>blacklist</class>
+ <widget class="QDialog" name="blacklist">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>732</width>
-    <height>604</height>
+    <width>529</width>
+    <height>599</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,20 +19,20 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>140</y>
-     <width>611</width>
-     <height>401</height>
+     <x>100</x>
+     <y>160</y>
+     <width>321</width>
+     <height>361</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>30</y>
-     <width>141</width>
-     <height>41</height>
+     <x>190</x>
+     <y>40</y>
+     <width>151</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -44,14 +44,14 @@
     </font>
    </property>
    <property name="text">
-    <string>회원 정보</string>
+    <string>블랙리스트</string>
    </property>
   </widget>
   <widget class="QPushButton" name="add_btn">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>94</y>
+     <x>268</x>
+     <y>114</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -79,43 +79,11 @@ QPushButton:hover{
     <string>추가</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="edit_btn">
-   <property name="geometry">
-    <rect>
-     <x>510</x>
-     <y>94</y>
-     <width>71</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Sans</family>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{
-	background-color: rgb(148, 198, 65);
-	color: rgb(255, 255, 255);
-	border-radius: 5px
-}
-QPushButton:hover{
-	
-	background-color: rgb(78, 154, 6);
-	border-radius: 5px
-}</string>
-   </property>
-   <property name="text">
-    <string>수정</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="remove_btn">
    <property name="geometry">
     <rect>
-     <x>598</x>
-     <y>94</y>
+     <x>350</x>
+     <y>114</y>
      <width>71</width>
      <height>31</height>
     </rect>
